# kayros

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
build-lera-highs/: Makefile  cmake_install.cmake
build-lera-highs/cpp/lera/: Makefile  cmake_install.cmake
cpp/bindings/: module.cpp
cpp/core/: queries.h  warp_eval.cpp  warp_eval.h
cpp/heuristics/: aco.cpp  construct.h  greedy_makespan.cpp  heuristics.h  ils.cpp  warp_ils.cpp  warp_ils.h
cpp/lera/: CMakeLists.txt  NOTICE.md
cpp/lera/bridge/: lera_bridge.cpp  lera_bridge.h  lera_module.cpp
cpp/lera/goc/include/goc/: goc.h
cpp/lera/goc/include/goc/base/: memory_monitor.h
cpp/lera/goc/include/goc/collection/: bitset_utils.h  matrix.h
cpp/lera/goc/include/goc/graph/: digraph.h  graph.h  graph_path.h  path_finding.h
cpp/lera/goc/include/goc/json/: json_utils.h
cpp/lera/goc/include/goc/linear_programming/colgen/: colgen.h
cpp/lera/goc/include/goc/linear_programming/highs/: highs_solver.h  matrix_formulation.h
cpp/lera/goc/include/goc/linear_programming/model/: variable.h
cpp/lera/goc/include/goc/log/: blb_execution_log.h  mlb_execution_log.h
cpp/lera/goc/include/goc/math/: interval.h  linear_function.h  number_utils.h  partitioned_interval.h  point_2d.h  pwl_function.h
cpp/lera/goc/include/goc/print/: print_utils.h
cpp/lera/goc/include/goc/runner/: runner_utils.h
cpp/lera/goc/include/goc/time/: deadline.h  time_utils.h
cpp/lera/goc/src/collection/: collection_utils.cpp
cpp/lera/goc/src/graph/: digraph.cpp  graph.cpp  graph_path.cpp  maxflow_mincut.cpp  path_finding.cpp
cpp/lera/goc/src/linear_programming/colgen/: colgen.cpp
cpp/lera/goc/src/linear_programming/highs/: highs_solver.cpp  matrix_formulation.cpp
cpp/lera/goc/src/linear_programming/solver/: bc_solver.cpp  cg_solver.cpp  lp_solver.cpp
cpp/lera/goc/src/log/: blb_execution_log.cpp  mlb_execution_log.cpp
cpp/lera/goc/src/math/: interval.cpp  linear_function.cpp  partitioned_interval.cpp  point_2d.cpp  pwl_function.cpp
cpp/lera/goc/src/runner/: runner_utils.cpp
cpp/lera/main/include/bcp/: bcp.h  pricing_problem.h  spf.h
cpp/lera/main/include/labeling/: bidirectional_labeling.h  label.h  labeling_level.h  lazy_label.h  monodirectional_labeling.h  ng_neighborhoods.h  pwl_domination_function.h  trace.h
cpp/lera/main/include/preprocess/: load_igp.h  preprocess_capacity.h  preprocess_ng_neighborhoods.h  preprocess_service_waiting.h  preprocess_time_windows.h  preprocess_travel_times.h  preprocess_triangle_depot.h  preprocess_utils.h  preprocess_validity.h
cpp/lera/main/src/bcp/: bcp.cpp  pricing_problem.cpp  spf.cpp
cpp/lera/main/src/labeling/: bidirectional_labeling.cpp  label.cpp  lazy_label.cpp  monodirectional_labeling.cpp  ng_neighborhoods.cpp  pwl_domination_function.cpp
cpp/lera/main/src/preprocess/: load_igp.cpp  preprocess_capacity.cpp  preprocess_ng_neighborhoods.cpp  preprocess_service_waiting.cpp  preprocess_time_windows.cpp  preprocess_travel_times.cpp  preprocess_triangle_depot.cpp  preprocess_utils.cpp  preprocess_validity.cpp
cpp/lera/nyr/include/nyr/: nyr.h
cpp/lera/nyr/include/nyr/collection/: collection_utils.h
cpp/lera/nyr/include/nyr/log/: timed_solutions.h
cpp/lera/nyr/include/nyr/math/: fast_math.h  fast_rng.h  interval.h  ndcpwlf.h
cpp/lera/nyr/include/nyr/params/: params.h
cpp/lera/nyr/include/nyr/solutions/: conversions.h  objectives.h  route.h  route_traits.h  vrp_solution.h
cpp/lera/nyr/include/nyr/time/: time.h
cpp/lera/nyr/include/nyr/vrp/: delta.h  instance.h  types.h
cpp/lera/nyr/src/math/: interval.cpp  ndcpwlf.cpp
cpp/lera/nyr/src/solutions/: conversions.cpp  objectives.cpp  route.cpp
cpp/lera/nyr/src/time/: time.cpp
cpp/lera/nyr/src/vrp/: delta.cpp  instance.cpp
cpp/ls/: lca_tree.cpp  lca_tree.h  leaves.cpp  local_search.cpp  ls.h  neighbours.cpp  neighbours.h  perturb.cpp  perturb.h  splice.cpp  warp_ls.h  warp_splice.cpp  warp_tree.cpp
cpp/pwlf/: warp.cpp  warp.h
nix-dev/: flake.nix
src/kayros/: __init__.py  _core.pyi  io.py  solve.py
src/kayros/lera/: __init__.py
tests/: conftest.py  td_fuzz.py  test_checker_equivalence.py  test_families.py  test_goc_pwl_stepwise.py  test_granular.py  test_ils.py  test_import.py  test_lera.py  test_lera_memory_guard.py  test_lera_stepwise_soundness.py  test_ls.py  test_nyr_ndcpwlf.py  test_perturb.py  test_prover_fuzz_soundness.py  test_pwlf_equivalence.py  test_solve.py  test_strategy.py  test_warp_equivalence.py  test_warp_tree.py  warp_reference.py
