[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "kayros"
# Version bump checklist — this key is the single source for code and packaging
# (scikit-build injects it as SKBUILD_PROJECT_VERSION_FULL -> CMake -> the
# KAYROS_VERSION compile definition -> kayros.__version__; the "0.0.0" in
# cpp/bindings/module.cpp is only a no-CMake fallback, never bump it).
# Bump BY HAND alongside this key: CITATION.cff `version:`, the README status
# line, and create the matching GitHub release tag vX.Y.Z (publish.yml ships
# the wheels to PyPI on release).
version = "0.5.0"
description = "KAYROS — exact & anytime solver for duration-minimization time-dependent vehicle routing (TDVRPTW / TDVRP)"
readme = "README.md"
authors = [
    { name = "Florian Rascoussier (Onyr)", email = "rascoussier.florian@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
# The canonical benchmark/checker dependency: the TD layer (loaders, NDCPWLF
# reference checker, BKS helpers) landed on PyPI with mamut-routing-lib 0.2.0;
# the floor is 0.6.0, the stack the 0.5.0 certification work was tested against
# (needs the OptimalityMetadata schema, present since 0.4.0).
dependencies = [
    "mamut-routing-lib>=0.6.0",
]

[project.optional-dependencies]
# lera: kept as a no-op alias for older install instructions — the exact BPC
# component (HiGHS backend) ships in the default build since 0.3.0 (M5.8).
# The CPLEX backend stays a source-build opt-in (-DLERA_LP_BACKEND=cplex).
lera = []

[dependency-groups]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/0nyr/kayros"
Issues = "https://github.com/0nyr/kayros/issues"
Benchmarks = "https://github.com/ANR-MAMUT/MAMUT-routing"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.26"
wheel.packages = ["src/kayros"]
sdist.exclude = [".github", "nix-dev"]
# License/attribution files carried into the wheel's .dist-info/licenses/. The
# root LICENSE covers kayros itself; cpp/lera/NOTICE.md is the MIT attribution
# for the vendored Lera-Romero BPC code, which ships compiled inside the wheel
# and MUST travel with its NOTICE (the default license-files globs only match
# top-level files, so the nested NOTICE is listed explicitly).
wheel.license-files = ["LICENSE", "cpp/lera/NOTICE.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
